# supplier_research_crew

./: README.md  pyproject.toml  requirements.txt
src/: api_endpoint.py  supplier_report.md  ui.py  ui1.py
src/ai_suppliers/: crew.py  crewai.py  main.py  ui3.py
src/ai_suppliers/config/: agents.yaml  tasks.yaml
src/ai_suppliers/tools/: custom_tool.py
src/suppliers/: 2023-04-19_suppliers_report.md  2024-01-02_suppliers_report.md  2024-01-29_suppliers_report.md  2024-07-26_suppliers_article.md  2024-07-26_suppliers_report.md  2024-07-27_entities_report.md  2024-07-27_suppliers_report.md  2024-08-16_suppliers_article.md  2024-08-17_suppliers_article.md  2024-08-17_suppliers_report.md  2024-08-18_suppliers_article.md  2024-08-24_suppliers_article.md  2024-08-24_suppliers_report.md  2024-08-27_suppliers_report.md  2024-08-28_suppliers_report.md  2024-10-27_suppliers_article_9-2-25.md  2024-10-27_suppliers_report.md  YYYY-MM-DD_suppliers_report.md  final_supplier_research_report.md  suppliers_article.md  suppliers_report.md  ubiquiti_suppliers_report.md  {date}_suppliers_report.md
suppliers/: 2024-10-27_suppliers_report.md  suppliers_article.md
suppliers - Copy/: 2024-07-26_suppliers_article.md  suppliers_article.md
