[project]
name = "ai_suppliers"
version = "0.1.0"
description = "ai-suppliers using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.0,<1.0.0",
    "exa-py>=1.8.8",
    "firecrawl-py>=1.11.0",
    "langchain-google-genai>=2.0.9",
]

[project.scripts]
ai_suppliers = "ai_suppliers.main:run"
run_crew = "ai_suppliers.main:run"
train = "ai_suppliers.main:train"
replay = "ai_suppliers.main:replay"
test = "ai_suppliers.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
